# ift585tp1

./: .gitignore  CMakeLists.txt  IFT585.natvis  README.md  Simulateur.sln  Simulateur.vcxproj  Simulateur.vcxproj.filters  main.cpp
Computer/: Computer.cpp  Computer.h
Computer/Driver/: NetworkDriver.cpp  NetworkDriver.h
Computer/Driver/Layer/: DataType.h  LinkLayer.cpp  LinkLayer.h  LinkLayerLow.cpp  LinkLayerLow.h  NetworkLayer.cpp  NetworkLayer.h  PhysicalLayer.cpp  PhysicalLayer.h
Computer/Hardware/: NetworkInterfaceCard.cpp  NetworkInterfaceCard.h
DataStructures/: CircularQueue.cpp  CircularQueue.h  DataBuffer.cpp  DataBuffer.h  MACAddress.cpp  MACAddress.h  Utils.h
General/: Configuration.cpp  Configuration.h  Logger.h  Timer.cpp  Timer.h
Output/: Computer1.txt  Computer1Files.txt  Computer2.txt  From_de-ad-be-ef-0-1-_To_a1-c1-e1-91-71-51-_hello.txt  Simulateur.ilk  global.txt  hello.txt
Transmission/: Cable.cpp  Cable.h  Interferences.cpp  Interferences.h  Transmission.cpp  Transmission.h
x64/Debug/: Simulateur.exe.recipe  Simulateur.ilk  vc141.idb  vc142.idb
x64/Debug/Simulateur.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Simulateur.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
